Display name change

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <div class="col-md-6 text-center">
 
-                <h1>Javascript Counter</h1>
+                <h1>Simple Counter</h1>
                 <h1 id="number">0</h1>
 
                 <button class="btn btn-success" onclick="increment()">INCREMENT</button>
